tests/paczka2/big_fuzzy/41186445.err
Error in line 7: X03X S939 20,2
Error in line 13: H4fZYzqJ7 S939 77,2
Error in line 17: 39gA2eBR A487 60,3
Error in line 26: tzZGCAi S939 47,2
Error in line 29: hQRJuGnj A487 68,1
Error in line 58: S939 A678 6,7
Error in line 78: hQRJuGnj A487 29,0
Error in line 79: Mqi A176 23,2
Error in line 75: X03X S939 78,6
Error in line 87: S939 A487 20,9
Error in line 103: tzZGCAi S939 63,7
Error in line 115: X03X A487 1,3
Error in line 118: H4fZYzqJ7 A678 19,9
Error in line 105: tzZGCAi A176 8,8
Error in line 122: 39gA2eBR A678 25,8
Error in line 133: X03X S939 109,1
Error in line 151: hQRJuGnj A487 35,5
Error in line 157: 39gA2eBR A678 42,21
Error in line 161: H4fZYzqJ7 A487 267,18
Error in line 158: 39gA2eBR A176 55,5
Error in line 166: S939 A678 24,0
Error in line 174: hQRJuGnj A6s8 51,3
Error in line 168: 39gA2eBR A487 51,7
Error in line 149: H4fZYzqJ7 A487 65,0
Error in line 177: tzZGCAi S939 63,3
Error in line 179: X03X A487 263,2
Error in line 189: hQRJuGnj A176 81,58
Error in line 191: 39gA2eBR A17Y 25Y,4
Error in line 175: hQRJuGnj A678 98,5
Error in line 194: S939 A176 37,0
Error in line 202: H4fZYzqJ7 A487 53,3
Error in line 200: S939 A487 78,9
Error in line 204: S939 S939 56,1
Error in line 217: tzZGCAi A487 u8,8
Error in line 218: Mqi A487 96,8
Error in line 227: 39gA2eBR A487 248,84
Error in line 228: X03X A176 25,9
Error in line 236: X03X S939 69,7
Error in line 243: tzZGCAi S939 13,59
Error in line 239: tzZGCAi S939 55,6
